master: added new method for service
